--- a/debug/vector/moving-canvas.html
+++ b/debug/vector/moving-canvas.html
@@ -17,7 +17,7 @@
 	<body>
 		<div id="map"></div>
 		<script type="module">
-			import {TileLayer, Map, CircleMarker} from 'leaflet';
+			import {TileLayer, Map, CircleMarker, Marker} from 'leaflet';
 
 			const osm = new TileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 				maxZoom: 19,
@@ -34,6 +34,7 @@
 			for (let i = 0; i < 20; i++) {
 				markers.push(new CircleMarker([50.5, 30.51], {color: colors[i % colors.length]}).addTo(map));
 			}
+			markers.push(new Marker([50.5, 30.51]).addTo(map));
 
 			function update() {
 				const t = new Date().getTime() / 1000;
